@@ -1,6 +1,9 @@
 devel
 -----
 
+* Pass through AQL query errors to UI graph viewer without turning them into
+  "Internal Server Error"s.
+
 * Fixed velocypack validator for proper check of keys.
 
 * Handle missing "shardingStrategy" in Plan agency entries for collections.
